--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Saurabh Kumar</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script> <!-- Placing script at the end ensures content loads first -->
 </head>
 <body>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <h1>Introduction of <i>Saurabh kumar</i></h1>
-    <P> Hello! My name is Saurabh kumar.</P>
-    <P>i'm learning html css and paralally c++ and DSA too. </P>
-    <p>if you want to know more about me---</p>
-    <a href="https://www.facebook.com/">this is my facebook id</a>
-    <br>
-    <a href="https://www.instagram.com/">this is my instagram id</a>
-    <br>
-    <a href="https://www.linkedin.com/">this is my linkedin id</a>
+
+    <h1>Hi, I'm <em>Saurabh Kumar</em></h1>
+
+    <p class="intro-text">I’m a tech enthusiast with a passion for creativity, problem-solving, and continuous learning. 
+       After exploring different paths, I discovered my true interest at the intersection of technology and digital innovation. 
+       I'm currently focused on building skills in areas like web development, design, and freelancing, and I enjoy creating 
+       work that’s both useful and impactful.</p>
+
+    <p class="intro-text">Thank you for visiting!</p>
+    
+    <p class="intro-text">If you’d like to connect or collaborate, feel free to contact me:</p>
+
+    <div class="social-links">
+        <a href="https://www.facebook.com/profile.php?id=100014313071510" target="_blank">Facebook</a>
+        <a href="https://www.instagram.com/saurabh.singh.1/" target="_blank">Instagram</a>
+    </div>
 
 </body>
 </html>
