change in style.css and some minor changes in index.html

--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Saurabh Kumar</title>
+    <title>Saurabh Kumar</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script> <!-- Placing script at the end ensures content loads first -->
 </head>
 <body>
 
-    <h1>Hi, I'm <em>Saurabh Kumar</em></h1>
-
+    <h1 class="h1">Saurabh Kumar</h1>
+    <hr>
     <p class="intro-text">I’m a tech enthusiast with a passion for creativity, problem-solving, and continuous learning. 
        After exploring different paths, I discovered my true interest at the intersection of technology and digital innovation. 
        I'm currently focused on building skills in areas like web development, design, and freelancing, and I enjoy creating 
        work that’s both useful and impactful.</p>
 
     <p class="intro-text">Thank you for visiting!</p>
-    
+    <hr>
     <p class="intro-text">If you’d like to connect or collaborate, feel free to contact me:</p>
 
-    <div class="social-links">
-        <a href="https://www.facebook.com/profile.php?id=100014313071510" target="_blank">Facebook</a>
-        <a href="https://www.instagram.com/saurabh.singh.1/" target="_blank">Instagram</a>
-    </div>
+<div class="button-al">
+    <a href="https://www.facebook.com/profile.php?id=100014313071510" target="_blank"><button class="facebook-button">facebook</button></a>
+    
+    <a href="https://www.instagram.com/saurabh.singh.1/" target="_blank"><button class="instagram-button">Instagram</button></a>
+</div> 
+    <hr>
 
 </body>
 </html>
