--- a/superhero.html
+++ b/superhero.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles/superhero.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saurabh's Heroes</title>
+    <title>Saurabh</title>
 </head>
 <body>
 
