--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>Saurabh</title>
 </head>
 <body>
+<div class="container">
 
-    <p class="p1">I am BATMAN</p>
-    <p class="p2">I am IRONMAN</p>
-    <p class="p3">I am SPIDERMAN</p>
-    <p class="p4">I am LOKI</p>
-    <p class="p5">I am DR. STRANGE</p>
-    <p class="p6">I am SUPERMAN</p>
-    <p class="p7">I am CAPTAIN AMERICA</p>
-    <p class="p8">I am FLASH</p>
+<a href="heros/batman.html" class="link"><p class="p1">BATMAN</p></a>
+<a href="ironman.html" class="link"><p class="p2">IRONMAN</p></a>
+<a href="spiderman.html" class="link"><p class="p3">SPIDERMAN</p></a>
+<a href="loki.html" class="link"><p class="p4">LOKI</p></a>
+<a href="strange.html" class="link"><p class="p5">DR. STRANGE</p></a>
+<a href="superman.html" class="link"><p class="p6">SUPERMAN</p></a>
+<a href="captain.html" class="link"><p class="p7">CAPTAIN AMERICA</p></a>
+<a href="flash.html" class="link"><p class="p8">FLASH</p></a>
+
+</div>
 
 </body>
 </html>
